--- a/src/components/home/rotatingImage/rotatingImage.module.css
+++ b/src/components/home/rotatingImage/rotatingImage.module.css
@@ -8,9 +8,7 @@
 }
 
 .image {
-    width: 200px;
-    /* Adjust image size as needed */
     height: auto;
     transition: transform 0.2s ease;
-    /* Smooth rotation transition */
+    margin-top: 600px;
 }
