--- a/src/components/home/weAreAgency/weareagency.module.css
+++ b/src/components/home/weAreAgency/weareagency.module.css
@@ -5,33 +5,54 @@
   /* Adjust height as needed */
   display: flex;
   margin-bottom: 100px;
+  justify-content: center;
+  align-items: center;
 }
 
 .textContainer {
+  position: absolute;
   width: 100%;
   height: 700px;
+  padding-left: 12%;
+  padding-right: 12%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
 }
 
 .bigTextBlock {
   position: absolute;
-  top: 40%;
-  left: 12%;
-  transform: translateY(-50%);
+  /* top: 50%;
+  left: 50%; */
+  transform: translateX(-50%);
   font-size: 80px;
   font-weight: 700;
-  width: 60%;
-  text-align: left;
+  width: 700px;
+  text-align: right;
   z-index: 1;
+}
+
+.bigTextBlock h1 {
+  width: 100%;
+  white-space: nowrap;
 }
 
 .smallText {
   position: absolute;
-  top: 65%;
-  right: 12%;
-  transform: translateY(-50%);
+  /* top: 50%;
+  left: 50%; */
+  transform: translateX(50%);
   font-size: 16px;
   font-weight: 350;
   width: 400px;
   text-align: center;
   z-index: 2;
+}
+
+@media (max-width: 768px) {
+  .bigTextBlock h1 {
+    font-size: 50px;
+  }
 }
