--- a/src/components/ui/gradient/Gradient.module.css
+++ b/src/components/ui/gradient/Gradient.module.css
@@ -3,6 +3,6 @@
     border-radius: 50%;
     width: 100%;
     height: 100%;
-    background: radial-gradient(circle, purple 0%, purple 25%, black 55%, black 100%);
+    background: radial-gradient(circle, purple 0%, purple 25%, #161616 55%, #161616 100%);
     overflow: hidden;
 }
