Try fix responsive in main page

--- a/src/components/ui/offerings/whatWeOfferYou.module.css
+++ b/src/components/ui/offerings/whatWeOfferYou.module.css
@@ -7,7 +7,7 @@
     gap: 24px;
     /* Space between the boxes */
     width: 100%;
-    max-width: 1312px;
+    /* max-width: 1312px; */
     /* Optional: limit the maximum width of the container */
     margin: 80px auto;
     /* Center the container horizontally */
