--- a/src/components/home/weAreAgency/weareagency.module.css
+++ b/src/components/home/weAreAgency/weareagency.module.css
@@ -2,13 +2,12 @@
   position: relative;
   width: 100%;
   height: 100vh;
-  /* Adjust height as needed */
   display: flex;
   margin-bottom: 100px;
   justify-content: center;
   align-items: center;
 }
-
+/* 
 .textContainer {
   position: absolute;
   width: 100%;
@@ -20,29 +19,25 @@
   align-items: center;
   justify-content: center;
   height: 100vh;
-}
+} */
 
-.bigTextBlock {
+/* .bigTextBlock {
   position: absolute;
-  /* top: 50%;
-  left: 50%; */
   transform: translateX(-50%);
   font-size: 80px;
   font-weight: 700;
   width: 700px;
   text-align: right;
   z-index: 1;
-}
+} */
 
-.bigTextBlock h1 {
+/* .bigTextBlock h1 {
   width: 100%;
   white-space: nowrap;
-}
+} */
 
-.smallText {
+/* .smallText {
   position: absolute;
-  /* top: 50%;
-  left: 50%; */
   transform: translateX(50%);
   font-size: 16px;
   font-weight: 350;
@@ -55,4 +50,4 @@
   .bigTextBlock h1 {
     font-size: 50px;
   }
-}
+} */
